[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/minigames/tug_of_war.gd" id="1_script"]

[node name="TugOfWar" type="Node"]
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "TUG OF WAR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="CountdownLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Time: 10.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = ""
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer3" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="RopeContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RopeBar" type="ColorRect" parent="VBoxContainer/RopeContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(500, 40)
color = Color(0.4, 0.3, 0.2, 1)

[node name="LeftZone" type="ColorRect" parent="VBoxContainer/RopeContainer/RopeBar"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 50.0
offset_bottom = 40.0
color = Color(0.9, 0.2, 0.2, 0.4)

[node name="RightZone" type="ColorRect" parent="VBoxContainer/RopeContainer/RopeBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 450.0
offset_right = 500.0
offset_bottom = 40.0
color = Color(0.2, 0.9, 0.2, 0.4)

[node name="Marker" type="ColorRect" parent="VBoxContainer/RopeContainer/RopeBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 240.0
offset_right = 260.0
offset_bottom = 40.0
color = Color(1, 0.9, 0.2, 1)

[node name="Spacer4" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Presses: 0"
horizontal_alignment = 1
vertical_alignment = 1
